--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "libgen.h": "c"
+        "libgen.h": "c",
+        "antiguoprocesomodificador": "c"
     }
 }
