fix monitoring without issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "libgen.h": "c",
-        "antiguoprocesomodificador": "c"
+        "antiguoprocesomodificador": "c",
+        "antiguapesquisa": "c"
     }
 }
